# yandex-direct-api

./: README.md  pyproject.toml
yandex_direct_api/: __init__.py  client.py
