[tool.poetry]
name = "yandex-direct-api"
version = "0.1.0"
description = "Python library API Yandex Direct"
authors = ["Oleg Ionov <ionov.dpmn@gmail.com>"]
readme = "README.md"
packages = [{include = "yandex_direct_api"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
